    old TclX server_* commands.
  o Removed the server_send command and made it a compatibility procedure.
    Now that the Tcl I/O system uses send and recv, this function is
    unnecessary.  Note: the comparibility procedure doesn't support the
    -dontroute and -outofband options (which had never been tested anyway).
    (* potential incompatibility *)
  o Use a function to set appname values returned by infox instead of global
    variables. (* potential incompatibility *)
  o Changed configure to use tclConfig.sh and tkConfig.sh for most
    configuration information.
-------------------------------------------------------------------------------
 2 Mar 96:
  o Added support for building shared libraries on systems where shared
    library support is implemented by Tcl.
===============================================================================
 2 Mar 96: Released TclX 7.5a Beta 2
===============================================================================
 4 Mar 96:
  o Cleaned up the runtime initialization.  Renamed TclInit.tcl to be tclx.tcl
    and created tkx.tcl.
-------------------------------------------------------------------------------
10 Mar 96:
  o Removed socket functionallity that duplicated Tcl's. Deprecated the
    server_connect, server_create, server_accept and  server_cntl commands.
    Renamed server_info to be host_info and moved the server_cntl
    functionallity info the fcntl command.   Compatbility with these commands
    is still supported for old scripts.
  o Since sockets are now required to build base Tcl, they are no longer
    optional with TclX.
  o Added event loop support for the TclX shell.  If any event sources are
    created the shell will enter an event loop at the end of the top level
    script instead of exiting.  Suggested by Jan Nijtmans
    <nijtmans@nici.kun.nl>.
-------------------------------------------------------------------------------