@@ -12,7 +12,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: Common.mk.in,v 5.9 1996/02/29 07:02:43 markd Exp $
+# $Id: Common.mk.in,v 5.10 1996/03/01 05:12:03 markd Exp $
 #------------------------------------------------------------------------------
 #
 
@@ -21,9 +21,9 @@ SHELL = /bin/sh
 #------------------------------------------------------------------------------
 # TclX version information extracted from tclExtend.h.
 #
-TCLX_FULL_VERSION  = @TCLX_FULL_VERSION@
+TCLX_SYM_VERSION   = @TCLX_SYM_VERSION@
 TCLX_SHLIB_VERSION = @TCLX_SHLIB_VERSION@
-TKX_FULL_VERSION   = @TKX_FULL_VERSION@
+TKX_SYM_VERSION    = @TKX_SYM_VERSION@
 TKX_SHLIB_VERSION  = @TKX_SHLIB_VERSION@
 
 #------------------------------------------------------------------------------
