@@ -13,10 +13,10 @@ dnl  Although the generated configure script is under the GNU Public,
 dnl  License Extended Tcl remains freely redistributable for any purpose,
 dnl  including commercial use.
 dnl----------------------------------------------------------------------------
-dnl $Id: configure.in,v 5.22 1996/03/10 22:17:03 markd Exp $
+dnl $Id: configure.in,v 5.23 1996/03/11 05:52:57 markd Exp $
 dnl----------------------------------------------------------------------------
 AC_INIT(../tcl/generic/tclExtend.h)
-ifdef([AC_REVISION],AC_REVISION($Revision: 5.22 $),)dnl
+ifdef([AC_REVISION],AC_REVISION($Revision: 5.23 $),)dnl
 
 # If `configure' is invoked (in)directly via `make', ensure that it
 # encounters no `make' conflicts.  Ignore error if shell does not have
@@ -183,10 +183,10 @@ AC_MSG_CHECKING(TclX versions)
 
 eval `egrep '^#define T.*_VERSION' $srcbasedir/tcl/generic/tclExtend.h | \
       sed -e 's/#define //' -e 's/ *"/="/'`
-AC_MSG_RESULT($TCLX_FULL_VERSION)
-AC_SUBST(TCLX_FULL_VERSION)
+AC_MSG_RESULT($TCLX_SYM_VERSION)
+AC_SUBST(TCLX_SYM_VERSION)
 AC_SUBST(TCLX_SHLIB_VERSION)
-AC_SUBST(TKX_FULL_VERSION)
+AC_SUBST(TKX_SYM_VERSION)
 AC_SUBST(TKX_SHLIB_VERSION)
 
 #------------------------------------------------------------------------------
